this will let joint owners own the same payments and avoid duplicates